#141 Fix jumping abstract editable on desktops.

--- a/src/scss/components/metadata/_pane.scss
+++ b/src/scss/components/metadata/_pane.scss
@@ -114,6 +114,6 @@
 	}
 
 	.abstract-body {
-		margin-bottom: 2px; // 24px
+		padding-bottom: 2px; // 24px, use padding to prevent collapsing margins
 	}
 }
